src/test/deca/context/invalid/created/SansObjet/if.deca
// Resultats:
//    Erreur contextuelle
//    Ligne 6 : Error: Expected expression type is boolean, got float

{
    if(3.7) {
        println(23);
    }
}